<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/intro_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_teal_300"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/intro"
                android:textColor="@color/md_blue_grey_800"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/enter_name"
                android:textColor="@color/md_blue_grey_800" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/white"
                android:hint="@string/name"
                android:padding="16dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="startQuiz"
                android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
                android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
                android:text="@string/start" />
        </LinearLayout>

        <!-- .................Question 1 begins here ........................ -->

        <LinearLayout
            android:id="@+id/question_1_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_lime_100"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/naija_flag" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:paddingTop="16dp"
                android:text="@string/Question_1"
                android:textColor="@color/md_blue_grey_800"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/question_1_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_1_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_1_a" />

                <RadioButton
                    android:id="@+id/question_1_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_1_b" />

                <RadioButton
                    android:id="@+id/question_1_c"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_1_c" />

                <RadioButton
                    android:id="@+id/question_1_d"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_1_d" />
            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="question_1_check"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:text="@string/next" />
        </LinearLayout>

        <!-- .................Question 2  begins here ........................ -->

        <LinearLayout
            android:id="@+id/question_2_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_lime_100"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/nigeria" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="16dp"
                android:text="@string/Question_2"
                android:textColor="@color/md_blue_grey_800"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/question_2_group"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/question_2_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_a" />

                <RadioButton
                    android:id="@+id/question_2_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_b" />

                <RadioButton
                    android:id="@+id/question_2_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_c" />

                <RadioButton
                    android:id="@+id/question_2_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_d" />
            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="question_2_check"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:text="@string/next" />


        </LinearLayout>

        <!-- .................Question 3 begins here ........................ -->

        <LinearLayout
            android:id="@+id/question_3_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_lime_100"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/nigerian_army" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/Question_3"
                android:textColor="@color/md_blue_grey_800"
                android:textSize="20sp" />


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question_3_a"
                android:text="@string/question_3_a" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question_3_b"
                android:text="@string/question_3_b" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question_3_c"
                android:text="@string/question_3_c" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question_3_d"
                android:text="@string/question_3_d" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="question_3_check"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:text="@string/next" />


        </LinearLayout>

        <!-- .................Question 4 begins here ........................ -->

        <LinearLayout
            android:id="@+id/question_4_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_lime_100"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/nigerias_population" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="16dp"
                android:text="@string/Question_4"
                android:textColor="@color/md_blue_grey_800"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/question_4_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                android:layout_margin="0dp">

                <RadioButton
                    android:id="@+id/question_4_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_a" />

                <RadioButton
                    android:id="@+id/question_4_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_b" />

                <RadioButton
                    android:id="@+id/question_4_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_c" />

                <RadioButton
                    android:id="@+id/question_4_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_d" />
            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="question_4_check"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:text="@string/next" />
        </LinearLayout>

        <!-- .................Question 5 begins here ........................ -->

        <LinearLayout
            android:id="@+id/question_5_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_lime_100"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/nigerian_economy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="16dp"
                android:text="@string/Question_5"
                android:textColor="@color/md_blue_grey_800"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/yr"
                android:inputType="phone"
                android:id="@+id/question_5_answer"
                android:padding="8dp"/>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="question_5_check"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:text="@string/next" />
        </LinearLayout>

        <!-- ....................Question 6 begins here....... -->

        <LinearLayout
            android:id="@+id/question_6_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_lime_100"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/currency" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="16dp"
                android:text="@string/Question_6"
                android:textColor="@color/md_blue_grey_800"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="#fff"
                    android:hint="@string/text"
                    android:inputType="text"
                    android:id="@+id/question_6_answer"
                    android:padding="8dp"/>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="question_6_check"
                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:text="@string/result_page" />
        </LinearLayout>

        <!-- ........ Result view .......................................... -->

        <LinearLayout
            android:id="@+id/result_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/thanks" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="result"
                android:text="@string/submit"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/failed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/send_email" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="email"
                android:text="@string/email" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="reset"
                android:text="@string/reset" />
        </LinearLayout>

    </RelativeLayout>


</ScrollView>